--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
     <div class="row row-center">
       <div id="aboutText" class="text">
-        <p>As an experienced content writer and translator who mostly worked in the technical field, simplicity has always been my motto for making the clients understand sometimes tricky manipulations or concepts. As I'm now back to school at 39 to learn web development with BeCode Ghent (Simplon method), I'll keep that quote in mind as I'm specializing in front-end. I will be available for an internship from September 2019.</p>
+        <p>As an experienced content writer and translator who mostly worked in the technical field, simplicity has always been my motto for making the clients understand sometimes tricky manipulations or concepts. As I'm now back to school at 39 to learn web development with BeCode Ghent, I'll keep that quote in mind as I'm specializing in front-end. I will be available for an internship from September 2019.</p>
       </div>
     </div>
 
@@ -107,6 +107,267 @@
 
   <!-- End of About -->
 
+  <!-- Resume -->
+
+  <section class="container" id="resume">
+    <!-- Resume -->
+    <div class="row">
+
+      <!-- Education -->
+      <div id="education">
+
+        <div class="col col-sm-3 titleCV">
+          <span class="prepend"><h3 style="color:#F06000"><strong>//&nbsp;</strong></h3></span>
+          <span class="append"><h3><strong>Education</strong></h3></span>
+        </div>
+        <div class="col col-sm-9 description">
+          <div class="row title"><h3>Training in Web Development</h3>
+          </div>
+          <div class="row place"><p><i>BeCode, Ghent (Belgium)</i> - 2019</p>
+          </div>
+          <div class="row details"><p>BeCode helps highly motivated and independent people become junior web developers within 6 months. It is based on the Simplon method stressing the benefit of "learning to learn" so as to avoid being stuck in the future when confronted with other digital languages. The program first covers the basics of front-end and back-end development before the students choose their own specialization. </p>
+          </div>
+        </div>
+
+      <div class="col col-sm-3 titleCV">
+      </div>
+        <div class="col col-sm-9 description">
+          <div class="row title"><h3>Master in Translation and International Relations</h3>
+          </div>
+          <div class="row place"><p><i>ISTI, Brussels (Belgium)</i> - 2005</p>
+          </div>
+          <div class="row details"><p>Formerly an independent school, ISTI is now the Translation and Intepretation department of the Free University of Brussels. During my master, I worked on two main projects: a research and translation thesis about corruption in the US institutions, and a research work about the importance of the French language within the organization "Canadian Parents for French".</p>
+          </div>
+        </div>
+
+      <div class="col col-sm-3 titleCV">
+      </div>
+        <div class="col col-sm-9 description">
+          <div class="row title"><h3>Bachelor in English and American studies</h3>
+          </div>
+          <div class="row place"><p><i>Paris X University, Nanterre (France)</i> - 2002</p>
+          </div>
+          <div class="row details"><p>I majored in American literature and history. The curriculum covered the following subjects: grammar, phonetics, British and American literature, British and American history, translation. </p>
+          </div>
+        </div>
+
+      </div><!-- End of education -->
+    </div><!-- End of row -->
+
+    <!-- Experience -->
+    <div class="row">
+      <div id="experience">
+        
+        <div class="col col-sm-3 titleCV">
+          <span class="prepend"><h3 style="color:#F06000"><strong>//&nbsp;</strong></h3></span>
+          <span class="append"><h3><strong>Experience</strong></h3></span>
+        </div>
+        <div class="col col-sm-9 description">
+          <div class="row title"><h3>Content Writer</h3>
+          </div>
+          <div class="row place"><p><i>Boulanger Group, Villeneuve d'Ascq (France)</i> - 2013-2018</p>
+          </div>
+          <div class="row details">
+            <p>Technical documentation (user manuals, quick guides, safety instructions), user-oriented materials (recipe books, educational leaflets for at-home training), newsletter (FR and ENG), proofreading. Volunteering as an in-house staff trainer for the implementation of Office 365 and Google Apps.
+          </div>
+        </div>
+
+      <div class="col col-sm-3 titleCV">
+      </div>
+        <div class="col col-sm-9 description">
+          <div class="row title"><h3>Technical Translator</h3>
+          </div>
+          <div class="row place"><p><i>CNRS, Villeneuve d'Ascq (France)</i> - 2010-2012</p>
+          </div>
+          <div class="row details"><p>Translating and proofreading technical articles written by PhD students, post-doc researchers and professors in the Computer Science Department. Administrative and language support to foreign students.</p>
+          </div>
+        </div>
+
+      <div class="col col-sm-3 titleCV">
+      </div>
+        <div class="col col-sm-9 description">
+          <div class="row title"><h3>Translator</h3>
+          </div>
+          <div class="row place"><p><i>ADPI, Orly (France)</i> - 2008-2010</p>
+          </div>
+          <div class="row details"><p>Technical translations: airport infrastructures, civil engineering, architecture. Legal translations: subcontracts, HR documents. General translations: website, brochures, letters, communication documents. Creation of a terminology database. </p>
+          </div>
+        </div>
+
+      <div class="col col-sm-3 titleCV">
+      </div>
+        <div class="col col-sm-9 description">
+          <div class="row title"><h3>French Teacher</h3>
+          </div>
+          <div class="row place"><p><i>Lady Eleanor Holles School, Hampton (UK)</i> - 2006-2008</p>
+          </div>
+          <div class="row details"><p>Teaching French to high school students and preparing them for the GCSE and A-Level exams. Animating the French Club and organizing language-related events (EuropeanDay of Languages, film screenings, etc.). </p>
+          </div>
+        </div>
+
+      <div class="col col-sm-3 titleCV">
+      </div>
+        <div class="col col-sm-9 description">
+          <div class="row title"><h3>Translation Project Manager</h3>
+          </div>
+          <div class="row place"><p><i>Translations, Paris (France)</i> - 2006</p>
+          </div>
+          <div class="row details"><p>Processing translation requests and sending quotes (financial and legalsectors). Selecting translators based on their fields of expertise. Proofreading. </p>
+          </div>
+        </div>
+
+      </div><!-- End of experience -->
+    </div><!-- End of row -->
+
+    <!-- Skills-->
+    <div class="row">
+      <div id="skills">
+
+        <div class="col col-sm-3 titleCV">
+          <span class="prepend"><h3 style="color:#F06000"><strong>//&nbsp;</strong></h3></span>
+          <span class="append"><h3><strong>Skills</strong></h3></span>
+        </div>
+        <div class="col col-sm-9 description">
+            <div class="row title"><h3>Web Development</h3>
+          </div>
+
+          <div class="row details">
+            <div class="col col-sm-6">
+              <p>HTML</p>
+              <div class="containerSkill">
+                <div class="skill html">90%</div>
+              </div>
+            </div>
+            <div class="col col-sm-6">
+              <p>CSS</p>
+              <div class="containerSkill">
+                <div class="skill css">80%</div>
+              </div>
+            </div>
+        </div>
+
+          <div class="row details">
+            <div class="col col-sm-6">
+              <p>JAVASCRIPT</p>
+              <div class="containerSkill">
+                <div class="skill javascript">50%</div>
+              </div>
+            </div>
+            <div class="col col-sm-6">
+              <p>PHP</p>
+              <div class="containerSkill">
+                <div class="skill php">50%</div>
+              </div>
+            </div>
+        </div>
+
+          <div class="row details">
+            <div class="col col-sm-6">
+              <p>GIT</p>
+              <div class="containerSkill">
+                <div class="skill git">60%</div>
+              </div>
+            </div>
+            <div class="col col-sm-6">
+            </div>
+        </div>
+      </div><!-- End of web development skills -->
+
+       <div class="col col-sm-3 titleCV">
+        </div>
+        <div class="col col-sm-9 description">
+            <div class="row title"><h3>Applications</h3>
+          </div>
+
+          <div class="row details">
+            <div class="col col-sm-6">
+              <p>MS OFFICE</p>
+              <div class="containerSkill">
+                <div class="skill office">90%</div>
+              </div>
+            </div>
+            <div class="col col-sm-6">
+              <p>GOOGLE APPS</p>
+              <div class="containerSkill">
+                <div class="skill google">90%</div>
+              </div>
+            </div>
+        </div>
+
+          <div class="row details">
+            <div class="col col-sm-6">
+              <p>ADOBE INDESIGN</p>
+              <div class="containerSkill">
+                <div class="skill indesign">90%</div>
+              </div>
+            </div>
+            <div class="col col-sm-6">
+              <p>ADOBE ILLUSTRATOR</p>
+              <div class="containerSkill">
+                <div class="skill illustrator">60%</div>
+              </div>
+            </div>
+        </div>
+
+          <div class="row details">
+            <div class="col col-sm-6">
+              <p>SONY VEGAS STUDIO</p>
+              <div class="containerSkill">
+                <div class="skill vegas">80%</div>
+              </div>
+            </div>
+            <div class="col col-sm-6">
+              <p>ADOBE PREMIERE</p>
+              <div class="containerSkill">
+                <div class="skill premiere">70%</div>
+              </div>
+            </div>
+          </div>
+      </div><!-- End of app skills -->
+
+       <div class="col col-sm-3 titleCV">
+        </div>
+        <div class="col col-sm-9 description">
+            <div class="row title"><h3>Languages</h3>
+          </div>
+
+          <div class="row details">
+            <div class="col col-sm-6">
+              <p>FRENCH</p>
+              <div class="containerSkill">
+                <div class="skill french">100%</div>
+              </div>
+            </div>
+            <div class="col col-sm-6">
+              <p>ENGLISH</p>
+              <div class="containerSkill">
+                <div class="skill english">95%</div>
+              </div>
+            </div>
+        </div>
+
+          <div class="row details">
+            <div class="col col-sm-6">
+              <p>SPANISH</p>
+              <div class="containerSkill">
+                <div class="skill spanish">70%</div>
+              </div>
+            </div>
+            <div class="col col-sm-6">
+              <p>DUTCH</p>
+              <div class="containerSkill">
+                <div class="skill dutch">40%</div>
+              </div>
+            </div>
+        </div>
+      </div><!-- End of language skills -->
+
+
+      </div><!-- End of all skills -->
+
+    </div><!-- End of row -->   
+
+  </section>
 
 </body>
 </html>
